优化移动端控制按钮的可访问性，增加触摸事件以支持方向改变，同时调整按钮样式以提升用户体验。

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <!-- 移动端方向控制按钮 -->
         <div class="mobile-controls">
             <div class="control-row">
-                <button class="control-btn" id="btn-up"><i class="fas fa-chevron-up"></i></button>
+                <button class="control-btn" id="btn-up" aria-label="向上" role="button" tabindex="0"><i class="fas fa-chevron-up"></i></button>
             </div>
             <div class="control-row">
-                <button class="control-btn" id="btn-left"><i class="fas fa-chevron-left"></i></button>
-                <button class="control-btn" id="btn-right"><i class="fas fa-chevron-right"></i></button>
+                <button class="control-btn" id="btn-left" aria-label="向左" role="button" tabindex="0"><i class="fas fa-chevron-left"></i></button>
+                <button class="control-btn" id="btn-right" aria-label="向右" role="button" tabindex="0"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="control-row">
-                <button class="control-btn" id="btn-down"><i class="fas fa-chevron-down"></i></button>
+                <button class="control-btn" id="btn-down" aria-label="向下" role="button" tabindex="0"><i class="fas fa-chevron-down"></i></button>
             </div>
         </div>
         
